--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -72,9 +72,11 @@ jobs:
           flutter-version: '3.10.6'
           channel: 'stable'
       - run: flutter --version
+      - run: ./localization
+      - run: ./build_runner
       - run: flutter pub get
       - run: flutter clean
-      - run: flutter build apk --flavor prod -t lib/core/flavors/main_prod.dart --release
+      - run: flutter build apk --release --flavor prod -t lib/core/flavors/main_prod.dart -v
 
       - name: Upload do APK para o firebase app distribution
         uses: actions/upload-artifact@v2
