--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -71,11 +71,11 @@ jobs:
         with:
           flutter-version: '3.10.6'
           channel: 'stable'
-      - run: flutter --version
-      - run: ./localization
-      - run: ./build_runner
-      - run: flutter pub get
+      - run: flutter doctor
       - run: flutter clean
+      - run: flutter pub get
+      - run: ./localization
+      - run: dart packages pub run build_runner build --delete-conflicting-outputs
       - run: flutter build apk --release --flavor prod -t lib/core/flavors/main_prod.dart -v
 
       - name: Upload do APK para o firebase app distribution
