--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -75,7 +75,7 @@ jobs:
       - run: flutter clean
       - run: flutter pub get
       - run: ./localization
-      - run: dart packages pub run build_runner build --delete-conflicting-outputs
+      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
       - run: flutter build apk --release --flavor prod -t lib/core/flavors/main_prod.dart -v
 
       - name: Upload do APK para o firebase app distribution
