--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -30,6 +30,8 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
+      - run: ./localization
+      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
       - run: flutter analyze --no-fatal-infos --no-fatal-warnings
       - run: dart format lib/ --set-exit-if-changed
       - run: dart format test/ --set-exit-if-changed
@@ -60,6 +62,10 @@ jobs:
       - name: Efetua checkout da branch
         uses: actions/checkout@v3
 
+      - name: Get Tag
+        id: tag_value
+        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
@@ -76,13 +82,15 @@ jobs:
       - run: flutter pub get
       - run: ./localization
       - run: flutter packages pub run build_runner build --delete-conflicting-outputs
-      - run: flutter build apk --release --flavor prod -t lib/core/flavors/main_prod.dart -v
+      - run: flutter build apk --release --flavor prod -t lib/core/flavors/main_prod.dart
 
       - name: Upload do APK para o firebase app distribution
         uses: actions/upload-artifact@v2
         with:
           name: appbundle
           path: build/app/outputs/flutter-apk/app-prod-release.apk
+          tag: ${{ steps.vars.outputs.tag }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload a Build Artifact to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
@@ -92,3 +100,53 @@ jobs:
           groups: testers
           file: build/app/outputs/flutter-apk/app-prod-release.apk
 
+
+  build_ios:
+    name: Build Flutter (iOS)
+    needs: flutter_test
+    runs-on: macos-latest
+    permissions:
+      checks: write
+      contents: write
+      packages: write
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+
+      - name: Setup flutter e builda projeto
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.10.6'
+          channel: 'stable'
+      - run: flutter doctor
+      - run: flutter clean
+      - run: flutter pub get
+      - run: ./localization
+      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
+      - run: |
+          flutter build ios --flavor prod -t lib/core/flavors/main_prod.dart --release --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd ..
+          zip -r app.ipa Payload
+
+      - name: Envia a realiso do app para o github
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: build/ios/iphoneos/app.ipa
+          tag: ios.${{ steps.vars.outputs.tag }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload a Build Artifact to Firebase app distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          groups: testers
+          file: build/ios/iphoneos/app.ipa
