--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -100,7 +100,6 @@ jobs:
           groups: testers
           file: build/app/outputs/flutter-apk/app-prod-release.apk
 
-
   build_ios:
     name: Build Flutter (iOS)
     needs: flutter_test
@@ -140,13 +139,13 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: build/ios/iphoneos/app.ipa
-          tag: ios.${{ steps.vars.outputs.tag }}
+          tag: ${{ steps.vars.outputs.tag }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload a Build Artifact to Firebase app distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-          appId: ${{secrets.FIREBASE_APP_ID}}
+          appId: ${{secrets.FIREBASE_APP_ID_IOS}}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
           file: build/ios/iphoneos/app.ipa
