--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -1,6 +1,8 @@
 name: Firebase Distribution
 
 on:
+  workflow_dispatch:
+
   release:
     types: [published]
 
@@ -30,8 +32,6 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
-      - run: ./localization
-      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
       - run: flutter analyze --no-fatal-infos --no-fatal-warnings
       - run: dart format lib/ --set-exit-if-changed
       - run: dart format test/ --set-exit-if-changed
