--- a/.github/workflows/distribution.yaml
+++ b/.github/workflows/distribution.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
   release:
-    types: [published]
+    types: [published, edited]
 
 jobs:
   flutter_test:
@@ -32,6 +32,8 @@ jobs:
           channel: 'stable'
       - run: flutter --version
       - run: flutter pub get
+      - run: ./localization
+      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
       - run: flutter analyze --no-fatal-infos --no-fatal-warnings
       - run: dart format lib/ --set-exit-if-changed
       - run: dart format test/ --set-exit-if-changed
@@ -123,13 +125,17 @@ jobs:
         with:
           flutter-version: '3.10.6'
           channel: 'stable'
+          cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:' # optional, change this to force refresh cache
+          cache-path: '${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:' # optional, change this to specify the cache path
+          architecture: x64 # optional, x64 or arm64
       - run: flutter doctor
       - run: flutter clean
       - run: flutter pub get
       - run: ./localization
       - run: flutter packages pub run build_runner build --delete-conflicting-outputs
       - run: |
-          flutter build ios --flavor prod -t lib/core/flavors/main_prod.dart --release --no-codesign
+          flutter build ipa --flavor prod -t lib/core/flavors/main_prod.dart --release --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
           cd ..
