adiciona run para acessar a pasta ios no build do app

--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -30,7 +30,9 @@ jobs:
           bundle install
 
       - name: Build iOS e deploy do firebase
-        run: bundle exec fastlane
+        run: |
+          cd ios
+          bundle exec fastlane
         env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_TESTER_GROUPS: ${{ secrets.FIREBASE_TESTER_GROUPS }}
