adiciona run para acessar a pasta ios no build do app

--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Build iOS e deploy do firebase
         run: |
           cd ios
-          bundle exec fastlane
+          bundle exec fastlane firebase
         env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_TESTER_GROUPS: ${{ secrets.FIREBASE_TESTER_GROUPS }}
