adiciona a chave do apple id e fastlane password

--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -37,3 +37,5 @@ jobs:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           FIREBASE_TESTER_GROUPS: ${{ secrets.FIREBASE_TESTER_GROUPS }}
           FIREBASE_DIST_SERVICE_ACCOUNT_FILE: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
