--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -27,6 +27,24 @@ jobs:
           name: id_rsa
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+
+      - name: Setup flutter e builda projeto
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.10.6'
+          channel: 'stable'
+      - run: flutter --version
+      - run: flutter pub get
+      - run: ./localization
+      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Setup Fastlane
         run: |
           cd ios
