--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -15,10 +15,10 @@ jobs:
       - name: Efetua checkout da branch
         uses: actions/checkout@v3
 
-      - name: Setup Ruby
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.7
+#      - name: Setup Ruby
+#        uses: actions/setup-ruby@v1
+#        with:
+#          ruby-version: 2.7
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
