--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -27,23 +27,23 @@ jobs:
 #          name: id_rsa
 #          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
-      - name: Setup Fastlane
-        run: |
-          cd ios
-          bundle install
-
-      - name: Build iOS e deploy para testflight
-        run: |
-          cd ios
-          bundle exec fastlane download_keys
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
-          APP_STORE_CONNECT_APPLE_ID: ${{ secrets.APP_STORE_CONNECT_APPLE_ID }}
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_KEYCHAIN_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
-          MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+#      - name: Setup Fastlane
+#        run: |
+#          cd ios
+#          bundle install
+#
+#      - name: Build iOS e deploy para testflight
+#        run: |
+#          cd ios
+#          bundle exec fastlane download_keys
+#        env:
+#          APPLE_ID: ${{ secrets.APPLE_ID }}
+#          FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
+#          APP_STORE_CONNECT_APPLE_ID: ${{ secrets.APP_STORE_CONNECT_APPLE_ID }}
+#          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+#          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+#          MATCH_KEYCHAIN_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
+#          MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
 
 #      - name: Setup Java
 #        uses: actions/setup-java@v3
@@ -52,11 +52,11 @@ jobs:
 #          java-version: '17'
 
       - name: Setup flutter e builda projeto
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.10.6'
-          channel: 'stable'
-          token: ${{ secrets.GITHUB_TOKEN }}
+#        uses: subosito/flutter-action@v2
+#        with:
+#          flutter-version: '3.10.6'
+#          channel: 'stable'
+#          token: ${{ secrets.GITHUB_TOKEN }}
       - run: flutter --version
       - run: flutter pub get
       - run: ./localization
