--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -51,17 +51,25 @@ jobs:
 #          distribution: 'temurin' # See 'Supported distributions' for available options
 #          java-version: '17'
 
-      - name: Setup flutter e builda projeto
+#      - name: Setup flutter e builda projeto
 #        uses: subosito/flutter-action@v2
 #        with:
 #          flutter-version: '3.10.6'
 #          channel: 'stable'
 #          token: ${{ secrets.GITHUB_TOKEN }}
-      - run: flutter --version
-      - run: flutter pub get
-      - run: ./localization
-      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
-      - run: flutter build ipa --export-options-plist ios/export/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
+#      - run: flutter --version
+#      - run: flutter pub get
+#      - run: ./localization
+#      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
+#      - run: flutter build ipa --export-options-plist ios/export/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
+
+      - name: Setup flutter e builda projeto
+        run: | 
+          flutter --version
+          flutter pub get
+          ./localization
+          flutter packages pub run build_runner build --delete-conflicting-outputs
+          flutter build ipa --export-options-plist ios/export/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
 
       - name: Setup Fastlane
         run: |
