--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -2,7 +2,7 @@
 
 source "https://rubygems.org"
 
-gem 'cocoapods', '1.11.3'
+gem 'cocoapods'
 gem "fastlane"
 
 plugins_path = File.join(File.dirname(__FILE__), 'fastlane', 'Pluginfile')
