--- a/.github/workflows/ios_distribution.yaml
+++ b/.github/workflows/ios_distribution.yaml
@@ -69,7 +69,7 @@ jobs:
           flutter pub get
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
-          flutter build ipa --export-options-plist ios/export/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
+#          flutter build ipa --export-options-plist ios/export/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
 
       - name: Setup Fastlane
         run: |
