--- a/ios/export/Info_dev.plist
+++ b/ios/export/Info_dev.plist
@@ -9,7 +9,7 @@
 	<key>provisioningProfiles</key>
 	<dict>
 		<key>eumedito.org.cincoMinutos.dev</key>
-		<string>eumedito.org.cincoMinutos.dev</string>
+		<string>match AdHoc eumedito.org.cincoMinutos.dev</string>
 	</dict>
 	<key>signingCertificate</key>
 	<string>Apple Distribution</string>
