--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,9 +2,10 @@ name: CI Tests
 
 on:
   workflow_dispatch:
+  workflow_call:
 
-  push:
-    branches:
+#  push:
+#    branches:
 
 jobs:
   flutter_test:
