--- a/ios/fastlane/.env
+++ b/ios/fastlane/.env
@@ -10,4 +10,4 @@ CONFIGURATION   = "Profile-dev"
 PROFILE_APP_STORE  = "5minutosDevDistProfile"
 PROFILE_AD_HOC     = "5minutosDevHocProfile"
 
-FIREBASE_TESTERS    = "testers"
+FIREBASE_TESTER_GROUPS    = "testers"
