--- a/.github/workflows/ios_distribution_dev.yaml
+++ b/.github/workflows/ios_distribution_dev.yaml
@@ -72,7 +72,7 @@ jobs:
           flutter pub get
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
-          flutter build ipa --export-options-plist ios/export/info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart
+          flutter build ipa --export-options-plist lib/core/export_plist/Info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart
 
       - name: Deploy para testflight
         run: |
