--- a/ios/fastlane/.env
+++ b/ios/fastlane/.env
@@ -10,4 +10,5 @@ CONFIGURATION   = "Profile-dev"
 PROFILE_APP_STORE  = "5minutosDevDistProfile"
 PROFILE_AD_HOC     = "5minutosDevHocProfile"
 
+FIREBASE_APP_ID_IOS = "1:106395996253:ios:fa86692c5f4dffcd03bdb4"
 FIREBASE_TESTER_GROUPS    = "testers"
