--- a/.github/workflows/distribution_dev.yaml
+++ b/.github/workflows/distribution_dev.yaml
@@ -15,8 +15,12 @@ jobs:
     needs: tests
     uses: polvo-labs/cincominutos-app/.github/workflows/ios_distribution_dev.yaml@main
 
+  android-distribution-dev:
+    needs: tests
+    uses: polvo-labs/cincominutos-app/.github/workflows/android_distribution_dev.yaml@main
+
   pre-release:
-    needs: ios-distribution-dev
+    needs: [ios-distribution-dev, android-distribution-dev]
     permissions:
       checks: write
       contents: write
