--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: cinco_minutos_meditacao
 description: A new Flutter project.
 publish_to: 'none'
 
-version: 1.0.3+3
+version: 1.1.0+1
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -33,60 +33,7 @@ dev_dependencies:
   flutter_flavorizr: ^2.2.1
   auto_route_generator: ^7.3.0
   build_runner: ^2.4.6
-
-flavorizr:
-  app:
-    android:
-      flavorDimensions: "flavor-type"
-
-  flavors:
-    dev:
-      app:
-        name: "Dev"
-      android:
-        applicationId: "eumedito.org.cinco_minutos.dev"
-        icon: "assets/images/icon_app_android.jpeg"
-        firebase:
-          config: "lib/core/firebase/dev/google-services.json"
-
-      ios:
-        bundleId: "eumedito.org.cincoMinutos.dev"
-        buildSettings:
-          # Development Team is visible in the apple developer portal
-          DEVELOPMENT_TEAM: cincoMinutos-dev
-          PROVISIONING_PROFILE_SPECIFIER: "Dev-ProvisioningProfile"
-        icon: "assets/images/icon_app_ios.jpeg"
-        firebase:
-          config: "lib/core/firebase/dev/GoogleService-Info.plist"
-        variables:
-          REVERSED_CLIENT_ID:
-            value: "com.googleusercontent.apps.106395996253-47re9j5qpusudfhvpfc8r3n9u8a86d76"
-          FLUTTER_TARGET:
-            value: "lib/core/flavors/main_dev.dart"
-
-    prod:
-      app:
-        name: "5 Minutos"
-      android:
-        applicationId: "eumedito.org.cinco_minutos"
-        icon: "assets/images/icon_app_android.jpeg"
-        firebase:
-          config: "lib/core/firebase/prod/google-services.json"
-
-      ios:
-        bundleId: "eumedito.org.cincoMinutos"
-        buildSettings:
-          # Development Team is visible in the apple developer portal
-          DEVELOPMENT_TEAM: cincoMinutos-prod
-          PROVISIONING_PROFILE_SPECIFIER: "Prod-ProvisioningProfile"
-        icon: "assets/images/icon_app_ios.jpeg"
-        firebase:
-          config: "lib/core/firebase/prod/GoogleService-Info.plist"
-        variables:
-          REVERSED_CLIENT_ID:
-            value: "com.googleusercontent.apps.106395996253-1o0qdh69ns2ttodsflvjth1n59j5sadr"
-          FLUTTER_TARGET:
-            value: "lib/core/flavors/main_prod.dart"
+  flutter_native_splash: ^2.3.2
 
 flutter:
 
