--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,5 +1,5 @@
 flutter_native_splash:
-  color: "#ffffff"
+  color: "#FFFFFF"
   image: "assets/images/splash_screen.png"
   android: true
   ios: true
