--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.18.0
   mockito: ^5.4.2
   flutter_native_splash: ^2.3.2
+  device_info_plus: ^9.0.3
 
 dev_dependencies:
   flutter_test:
