--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   mockito: ^5.4.2
   flutter_native_splash: ^2.3.2
   device_info_plus: ^9.0.3
+  firebase_performance: ^0.9.2+5
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,7 @@ flutter:
     - .env.dev
     - .env
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
