--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ flutter:
     - .env.dev
     - .env
     - assets/images/
-    - assets/icons/
+    - assets/images/gifs/
+    - assets/images/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
